php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #60768 Output buffer not discarded
Submitted: 2012-01-16 13:26 UTC Modified: 2012-01-16 21:04 UTC
Votes:2
Avg. Score:4.0 ± 1.0
Reproduced:1 of 2 (50.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: juzna dot cz at gmail dot com Assigned: mike (profile)
Status: Closed Package: Output Control
PHP Version: 5.4.0RC5 OS: Linux (Ubuntu)
Private report: No CVE-ID: None
 [2012-01-16 13:26 UTC] juzna dot cz at gmail dot com
Description:
------------
Output buffer is not discarded when flushed. It causes that all the data in it 
get replicated many times.

Test script:
---------------
https://gist.github.com/1620837

Expected result:
----------------
Output file size: 4205, expected about 4205

Actual result:
--------------
Output file size: 465095, expected about 4205

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-01-16 21:04 UTC] mike@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: mike
 [2012-01-16 21:04 UTC] mike@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-01-16 21:08 UTC] juzna dot cz at gmail dot com
Thanks for very quick fix mike, works fine now.
 [2012-04-18 09:46 UTC] laruence@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f32760bd40aa368beeccd8ce53b425b2ebae159c
Log: Fix bug #60768  Output buffer not discarded
 [2012-07-24 23:37 UTC] rasmus@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f32760bd40aa368beeccd8ce53b425b2ebae159c
Log: Fix bug #60768  Output buffer not discarded
 [2013-11-17 09:34 UTC] laruence@php.net
Automatic comment on behalf of mike
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f32760bd40aa368beeccd8ce53b425b2ebae159c
Log: Fix bug #60768  Output buffer not discarded
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Aug 11 00:00:01 2026 UTC